k8s/cloud-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-api
  template:
    metadata:
      labels:
        app: cloud-api
    spec:
      containers:
      - name: cloud-api
        image: ghcr.io/readerofvillage/cloud-api:07b569f07e65c5722d49e8cdde9487e60fe3a7d7

        ports:
        - containerPort: 8000
