k8s/cloud-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-api
spec:
  selector:
    app: cloud-api
  ports:
    - port: 8000
      targetPort: 8000
